plugins/Public/OpenJourneyServer-Apache/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-deployment
  labels:
    app: apache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
        - name: apache
          image: httpd:2.4
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: apache-config
              mountPath: /usr/local/apache2/conf/httpd.conf
              subPath: httpd.conf
            - name: apache-config-extra
              mountPath: /usr/local/apache2/conf/extra/
            - name: tile-cache
              mountPath: /var/lib/mod_tile
            - name: renderd-socket
              mountPath: /var/run/renderd
      volumes:
        - name: apache-config
          configMap:
            name: apache-config
            items:
              - key: httpd.conf
                path: httpd.conf
        - name: apache-config-extra
          configMap:
            name: apache-config
            items:
              - key: mod_tile.conf
                path: mod_tile.conf
              - key: tile-site.conf
                path: tile-site.conf
        - name: tile-cache
          persistentVolumeClaim:
            claimName: renderd-tile-cache-pvc
        - name: renderd-socket
          persistentVolumeClaim:
            claimName: renderd-socket-pvc
